Added header, footer, and nav from latahBootstrap.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,16 @@
 <footer>
-
+  <div id="footer">
+      <div class="row">
+          <div id="container">
+              <div class="nav navbar-inverse navbar-fixed-bottom">
+                  <div class="text-center">
+                      <h4 class="text-muted text-center">
+                          Copyright &copy; <span id="year">2016</span> Latah County<br />
+                          Terms of use<br />
+                      </h4>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
 </footer>
