--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,15 @@
 <header>
-
+  <div class="container-fluid">
+    <div class="row" id="header">
+      <div class="col-md-2 col-sm-2 col-xs-2">
+        <img class="img img-responsive" id="logo_sm" src="/img/logo_sm.png" />
+      </div>
+      <div class="page-header text-center col-md-8 col-sm-8 col-xs-10">
+        <h1>Latah County</h1>
+      </div>
+      <div class="col-md-2 col-sm-2 hidden-xs">
+        <img class="img img-responsive" id="stateseal" src="/img/StateSeal.png" />
+      </div>
+    </div>
+  </div>
 </header>
