--- a/_sass/_global.sass
+++ b/_sass/_global.sass
@@ -18,7 +18,7 @@ body
 #wrap > .container
   background-color: $wrapper-color
   border-radius: 15px
-  padding: 0 15px
+  padding: 0 15px 25px
 
 #header
   background-color: $header-color
