--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
                   <div class="text-center">
                       <h4 class="text-muted text-center">
                           Copyright &copy; <span id="year">2016</span> Latah County<br />
-                          Terms of use<br />
+                          <a href="{{ site.baseurl }}/terms/">Terms of use</a><br />
                       </h4>
                   </div>
               </div>
