--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,94 +11,78 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="<!--active-->"><a href="#">Home</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Elected Officials<b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
+            <li class="">
+              {% for link in site.data.menu.Home %}
+                <li>
+                  <a class="page-link" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
+                </li>
+              {% endfor %}
+            </li>
+            <li class="">
+              {% for link in site.data.menu.Officials %}
+                <li>
+                  <a class="page-link" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
+                </li>
+              {% endfor %}
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments <b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="#">Assessor</a></li>
-              <li><a href="#">Auditor/Clerk/Recorder</a></li>
-              <li><a href="#">Building &amp; Grounds</a></li>
-              <li><a href="#">Commissioners</a></li>
-              <li><a href="#">Coroner</a></li>
-              <li><a href="#">Court Assistance</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li><a href="#">Separated link</a></li>
-              <li><a href="#">One more separated link</a></li>
+              {% for link in site.data.menu.Departments %}
+                <li>
+                  <a class="page-link" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
+                </li>
+              {% endfor %}
             </ul>
             </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Resources <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
+            <li class="">
+              {% for link in site.data.menu.Resources %}
+                <li>
+                  <a class="page-link" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
+                </li>
+              {% endfor %}
             </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Employment <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
+            <li class="">
+              {% for link in site.data.menu.Employment %}
+                <li>
+                  <a class="page-link" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
+                </li>
+              {% endfor %}
             </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Elections <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
+            <li class="">
+              {% for link in site.data.menu.Elections %}
+                <li>
+                  <a class="page-link" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
+                </li>
+              {% endfor %}
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Quick Links <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
+            <ul class="dropdown-menu">
+              {% for link in site.data.menu.Quick_links %}
+                <li>
+                  <a class="page-link" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
+                </li>
+              {% endfor %}
+            </ul>
             </li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Mapping <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Mapping<b class="caret"></b></a>
+            <ul class="dropdown-menu">
+              {% for link in site.data.menu.Mapping %}
+                <li>
+                  <a class="page-link" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
+                </li>
+              {% endfor %}
+            </ul>
             </li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="">
+              {% for link in site.data.menu.Contact %}
+              <li>
+                <a class="page-link" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
+              </li>
+              {% endfor %}
+            </li>
           </ul>
         <!-- <div class="col-sm-3 col-md-3 pull-right">
             <form class="navbar-form" role="search">
