--- a/_sass/_variables.sass
+++ b/_sass/_variables.sass
@@ -2,7 +2,7 @@
 
 //Colors
 $container-color: #FFF
-$header-color: #EAEDF7
+$wrapper-color: #FFF
+$header-color: none
 $primary-color: #263E28
-$wrapper-color: #EEE
 $header-font: 'Lobster', cursive
