Added dynamic year for footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,8 +5,8 @@
               <div class="nav navbar-inverse navbar-fixed-bottom">
                   <div class="text-center">
                       <h4 class="text-muted text-center">
-                          Copyright &copy; <span id="year">2016</span> Latah County<br />
-                          <a href="{{ site.baseurl }}/terms/">Terms of use</a><br />
+                        Copyright &copy; {% include copyright.html %} Latah County<br />
+                        <a href="{{ site.baseurl }}/terms/">Terms of use</a><br />
                       </h4>
                   </div>
               </div>
