Changed background image.

--- a/_sass/_global.sass
+++ b/_sass/_global.sass
@@ -1,7 +1,7 @@
 // Custom Styling
 body
   background-color: $primary-color
-  background: url(/assets/palouse.jpg) 0 0 no-repeat
+  background: url(/assets/palouse.png) 0 0 no-repeat
   background-attachment: fixed
   background-size: cover
   padding-top: 60px
