Added work around  for new background image.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,5 +17,5 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
   <!-- WorkAround: Force asset to be included -->
-  <img src="{% asset_path palouse.jpg %}" style="display:none;" />
+  <!-- <img src="{% asset_path palouse.png %}" style="display:none;" /> -->
 </head>
