--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="container-fluid">
+  <div class="container-fluid hidden-xs">
     <div class="row" id="header">
       <div class="col-md-2 col-sm-2 col-xs-2">
         <img class="img img-responsive" id="logo_sm" src="{% asset_path logo_sm.png %}" />
