--- a/_sass/_fonts.sass
+++ b/_sass/_fonts.sass
@@ -1,1 +1,3 @@
 @import "https://fonts.googleapis.com/css?family=Lobster:400.css"
+@import "https://fonts.googleapis.com/css?family=Roboto"
+@import "https://fonts.googleapis.com/css?family=Montserrat:500"
