Updated home page theme and banner.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <img class="img img-responsive" id="logo_sm" src="{% asset_path logo_sm.png %}" />
       </div>
       <div class="page-header text-center col-md-8 col-sm-8 col-xs-10">
-        <h1>Latah County</h1>
+        <h1>Latah County Idaho</h1>
       </div>
       <div class="col-md-2 col-sm-2 hidden-xs">
         <img class="img img-responsive" id="stateseal" src="{% asset_path StateSeal.png %}" />
