--- a/_sass/_global.sass
+++ b/_sass/_global.sass
@@ -20,6 +20,11 @@ body
   border-radius: 15px
   padding: 0 15px 25px
 
+#banner
+  background: url(/assets/palouse.png) no-repeat
+  height: 200px
+  margin-top: 10px
+
 #header
   background-color: $header-color
   font-family: $header-font
@@ -30,3 +35,6 @@ body
 
 #stateseal
   float: right
+
+#aboutRow
+  margin: 10px 0
