--- a/_sass/_variables.sass
+++ b/_sass/_variables.sass
@@ -5,4 +5,4 @@ $container-color: #FFF
 $wrapper-color: #FFF
 $header-color: none
 $primary-color: #263E28
-$header-font: 'Montserrat', sans-serif
+$header-font: 'Cinzel', serif
