--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,9 @@
       {% include nav.html %}
         <!-- Wrap all page content here -->
         <div class="container">
-          {% include header.html %}
+          <div id="banner" class="hidden-xs">
+            {% include header.html %}
+          </div>
 
     <div class="page-content">
       {{ content }}
