Updated Home about. Fixed #7 background opacity.

--- a/_sass/_variables.sass
+++ b/_sass/_variables.sass
@@ -2,7 +2,7 @@
 
 //Colors
 $container-color: #FFF
-$wrapper-color: #FFF
+$wrapper-color: rgba(255,255,255,.8)
 $header-color: none
 $primary-color: #263E28
 $header-font: 'Cinzel', serif
