Added banner to all pages.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,10 @@
       {% include nav.html %}
         <!-- Wrap all page content here -->
         <div class="container">
+          <div id="banner" class="hidden-xs">
+            {% include header.html %}
+          </div>
+          
     <div class="page-content">
       {{ content }}
     </div>
