--- a/_sass/_global.sass
+++ b/_sass/_global.sass
@@ -29,6 +29,13 @@ body
   background-color: $header-color
   font-family: $header-font
 
+.page-header
+  border: none
+
+#deptHeader
+  color: $deptHeader-color
+  font-family: $header-font
+
 #stateseal, #logo_sm
   max-width: 100px
   padding-top: 10px
