--- a/_sass/_variables.sass
+++ b/_sass/_variables.sass
@@ -2,7 +2,10 @@
 
 //Colors
 $container-color: #FFF
-$wrapper-color: rgba(255,255,255,.8)
+$deptHeader-color: #FFF
 $header-color: none
 $primary-color: #263E28
+$wrapper-color: rgba(255,255,255,.8)
+
+//Fonts
 $header-font: 'Cinzel', serif
