--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,13 +1,12 @@
 ---
 layout: default
 ---
-<article class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+  <h1 class="visible-xs text-center">{{ page.title }}</h1>
+
   <hr>
-  <div class="post-content">
+
+  <div>
     {{ content }}
   </div>
 
