--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,14 +7,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">
-            <img class="img img-responsive visible-xs" width="25px" src="{% asset_path logo_sm.png %}" />
-            </a>
-            <a class="navbar-brand" href="#">Latah County</a>
+          <a class="navbar-brand visible-xs" href="/">
+            <img class="img img-responsive" width="25px" src="{% asset_path logo_sm.png %}" />
+          </a>
+            <a class="navbar-brand visible-xs" href="/">Latah County</a>
         </div>
         <div class="collapse navbar-collapse">
           {% assign current = page.url | downcase | split: '/' %}
-
+          <form class="navbar-form navbar-right" role="search">
+              <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Search">
+              </div>
+          </form>
           <ul class="nav navbar-nav">
             <li {% if current[1] == 'home' %}class='active'{% endif %}>
               {% for link in site.data.menu.Home %}
