Updated background and banner to use cloudinary.

--- a/_sass/_global.sass
+++ b/_sass/_global.sass
@@ -1,7 +1,7 @@
 // Custom Styling
 body
   background-color: $primary-color
-  background: url(/assets/palouse.png) 0 0 no-repeat
+  background: url(https://res.cloudinary.com/latah-county-its/image/fetch/c_limit,f_auto,q_auto,w_auto,dpr_auto/https://latah-site.netlify.com/img/palouse.png) 0 0 no-repeat
   background-attachment: fixed
   background-size: cover
   padding-top: 60px
@@ -21,7 +21,7 @@ body
   padding: 0 15px 25px
 
 #banner
-  background: url(/assets/palouse.png) no-repeat
+  background: url(https://res.cloudinary.com/latah-county-its/image/fetch/c_limit,f_auto,q_auto,w_auto,dpr_auto/https://latah-site.netlify.com/img/palouse.png) no-repeat
   height: 200px
   margin-top: 10px
 
