Updated to use cloudinary

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand visible-xs" href="/">
-            <img class="img img-responsive" alt="Latah County Seal" width="25px" src="{% asset_path logo_sm.png %}" />
+            {% cloudinary logo_sm /img/logo_sm.png alt="Latah County Seal" %}
           </a>
             <a class="navbar-brand visible-xs" href="/">Latah County</a>
         </div>
