Fixed the mobile nav brand logo size.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand visible-xs" href="/">
-            {% cloudinary logo_sm /img/logo_sm.png alt="Latah County Seal" %}
+            {% cloudinary brandLogo /img/logo_sm.png alt="Latah County Seal" %}
           </a>
             <a class="navbar-brand visible-xs" href="/">Latah County</a>
         </div>
