Created department directory.

--- a/_sass/_global.sass
+++ b/_sass/_global.sass
@@ -45,3 +45,10 @@ body
 
 #aboutRow
   margin: 10px 0
+
+.row.display-flex
+  display: flex
+  flex-wrap: wrap
+  > [class*='col-']
+    display: flex
+    flex-direction: column
