Added link class for list-group-items.

--- a/_sass/_global.sass
+++ b/_sass/_global.sass
@@ -52,3 +52,10 @@ body
   > [class*='col-']
     display: flex
     flex-direction: column
+
+.list-group-item
+  &.list-link
+    color: #60AFE2
+    &:hover
+      color: #60AFE2
+      text-decoration: underline
