Added list control styling and changed the color to a darker blue, consistent with other links

--- a/_sass/_global.sass
+++ b/_sass/_global.sass
@@ -55,7 +55,7 @@ body
 
 .list-group-item
   &.list-link
-    color: #60AFE2
+    color: #337ab7
     &:hover
-      color: #60AFE2
+      color: #337ab7
       text-decoration: underline
