Added news processing from REST endpoint call

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -50,5 +50,9 @@
     {% js fileTree.js %}
   {% endif %}
 
+{% if page.news %}
+  {% js news.js %}
+{% endif %}
+
   <!-- WorkAround: Force asset to be included -->
 </head>
