Added weather to header banner.

--- a/_includes/tail.html
+++ b/_includes/tail.html
@@ -12,6 +12,8 @@
 <!-- Custom Scripts -->
 <!-- Current year for Copyright on footer -->
 {% js year.js %}
+<!-- Weather for banner -->
+{% js weather.js %}
 
 <!-- Contacts -->
 {% if page.title == "Contact" %}
