--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -6,3 +6,12 @@
 
 #jobInfo
   padding-left: 25px
+
+// Header weather
+.info
+  display: block
+  color: #FFFFFF
+  margin-top: 125px
+  margin-left: 60px
+  text-align: center
+  font-size: 1em
