--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,9 @@
       </div>
       <div class="col-md-2 col-sm-2 hidden-xs">
         {% cloudinary stateseal /img/StateSeal.png alt="Idaho State Seal" %}
+        <div class="info" id="weatherBox">
+          <div id="weather"></div>
+        </div>
       </div>
     </div>
   </div>
