Changed API source and removed conditions.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,6 +15,7 @@
         {% cloudinary stateseal /img/StateSeal.png alt="Idaho State Seal" %}
         <div class="info" id="weatherBox">
           <div id="weather"></div>
+          <!-- Weather provided by NOAA. -->
         </div>
       </div>
     </div>
