--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,12 +35,12 @@
 
   <!-- Contacts -->
   {% if page.title == "Contact" %}
-    {% js contacts.js %}
+    {% js contactInfo.js %}
   {% endif %}
 
   <!-- Contacts -->
   {% if page.contacts %}
-    {% js contacts.js %}
+    {% js contactInfo.js %}
   {% endif %}
 
   <!-- Bootstrap Treeview -->
