--- a/_includes/contactBlock.html
+++ b/_includes/contactBlock.html
@@ -1,7 +1,5 @@
-<div class="panel panel-default">
-  <div class="list-group" data-toggle="modal" data-target="#contactBlock">
-    <a class="list-group-item text-center">Contact Us</a>
-  </div>
+<div class="list-group ">
+  <div class="list-group-item btn list-link text-center" data-toggle="modal" data-target="#contactBlock">Contact Us</div>
 </div>
 
 <!-- Modal -->
