Added name to department.

--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -3,7 +3,7 @@
     <label for="department" class="control-label">Department</label>
     <div class="input-group">
         <span class="input-group-addon"><i class="fa fa-users" aria-hidden="true"></i></span>
-        <select class="form-control" id="department" required>
+        <select class="form-control" id="department" name="department ID" required>
           <option id="deptList" value="loading" disabled selected>Loading...</option>
         </select>
       </div>
