Added Court Assistance Office page, tweaked services header size, added overflow ellipse on list boxes

--- a/_sass/_global.sass
+++ b/_sass/_global.sass
@@ -54,6 +54,9 @@ body
     flex-direction: column
 
 .list-group-item
+  overflow: hidden
+  text-overflow: ellipsis
+  white-space: nowrap
   &.list-link
     color: #337ab7
     &:hover
