Updated list-group style

--- a/_sass/_global.sass
+++ b/_sass/_global.sass
@@ -55,7 +55,7 @@ body
 
 .list-group-item
   overflow: hidden
-  text-overflow: ellipsis
+  // text-overflow: ellipsis
   white-space: nowrap
   &.list-link
     color: #337ab7
