Updated global list-group class.

--- a/_sass/_global.sass
+++ b/_sass/_global.sass
@@ -56,7 +56,7 @@ body
 .list-group-item
   overflow: hidden
   // text-overflow: ellipsis
-  white-space: nowrap
+  // white-space: nowrap
   &.list-link
     color: #337ab7
     &:hover
