Changed Dept Menu Dropdown to resize dynamically.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
   <div id="footer">
       <div class="row">
           <div id="container">
-              <div class="nav navbar-inverse navbar-fixed-bottom">
+              <div class="nav navbar-inverse navbar-fixed-bottom" id="navFooter">
                   <div class="text-center">
                       <h4 class="text-muted text-center">
                         Copyright &copy; <span id="currentYear"></span> Latah County<br />
