--- a/_includes/tail.html
+++ b/_includes/tail.html
@@ -10,8 +10,8 @@
 
 
 <!-- Custom Scripts -->
-<!-- Current year for Copyright on footer -->
-{% js year.js %}
+<!-- Global JS -->
+{% js main.js %}
 <!-- Weather for banner -->
 {% js weather.js %}
 
