--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -46,7 +46,7 @@
             </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments <b class="caret"></b></a>
-            <ul class="dropdown-menu">
+            <ul class="dropdown-menu" id="deptNav">
               {% for link in site.data.menu.Departments %}
                 <li>
                   <a class="page-link" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
