Removed Search Bar until future development.

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
                 <input type="text" class="form-control algolia__input js-algolia__input" id="navSearchBar" title="Search Bar" autocomplete="off" name="query" placeholder="Search..." />
               </div>
           </form>
-          <div class="dropdown navbar-form navbar-right hidden-xs">
+          <!-- <div class="dropdown navbar-form navbar-right hidden-xs">
             <button class="btn btn-default dropdown-toggle" type="button" id="dropSearch" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
               <i class="glyphicon glyphicon-search"></i>
             </button>
@@ -28,7 +28,7 @@
                         <input type="text" class="form-control algolia__input js-algolia__input" id="navSearchBar" title="Search Bar" autocomplete="off" name="query" placeholder="Search..." />
                     </div>
                 </form>
-          </div>
+          </div> -->
           <ul class="nav navbar-nav">
             <li {% if current[1] == 'home' %}class='active'{% endif %}>
               {% for link in site.data.menu.Home %}
