--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -45,7 +45,7 @@
               {% endfor %}
             </li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Departments <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Dropdown for department menu.">Departments <b class="caret"></b></a>
             <ul class="dropdown-menu" id="deptNav">
               {% for link in site.data.menu.Departments %}
                 <li>
