--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -45,11 +45,7 @@
               {% endfor %}
             </li>
             <li class="dropdown">
-<<<<<<< HEAD
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-label="Dropdown for department menu.">Departments <b class="caret"></b></a>
-=======
-              <a href="#" id="deptDropDown" class="dropdown-toggle" data-toggle="dropdown">Departments <b class="caret"></b></a>
->>>>>>> 7b6167efbb1bc315d7bc61689da89c174b9f9cb3
+              <a href="#" id="deptDropDown" class="dropdown-toggle" data-toggle="dropdown" aria-label="Dropdown for department menu.">Departments <b class="caret"></b></a>
             <ul class="dropdown-menu" id="deptNav">
               {% for link in site.data.menu.Departments %}
                 <li>
