--- a/_includes/tail.html
+++ b/_includes/tail.html
@@ -30,7 +30,7 @@
 <!-- Adds upcomingEvents script to pages. -->
 {% if page.calendar %}
   {% asset calendar.js %}
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.min.js" integrity="sha256-SYIz/7Qe8avYdBE3w2kKVL1PB/mS05GGgKVn5qa86SY=" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.min.css" integrity="sha256-Kpo67ZL4Mq+OPqdedHe9lvnMI6i6gZOI1+7NqujLdq0=" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.4.0/fullcalendar.print.min.css" integrity="sha256-O3Oq9/mud7866SStmc+zBcjkPs2PY/I/MhETci3wOrg=" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/fullcalendar@3.8.0/dist/fullcalendar.min.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@3.8.0/dist/fullcalendar.min.css" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@3.8.0/dist/fullcalendar.print.min.css" crossorigin="anonymous" />
 {% endif %}
