--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -44,7 +44,7 @@
                 </li>
               {% endfor %}
             </li>
-            <li class="dropdown">
+            <li class="dropdown" id="dropDown">
               <a href="#" id="deptDropDown" class="dropdown-toggle" data-toggle="dropdown" aria-label="Dropdown for department menu.">Departments <b class="caret"></b></a>
             <ul class="dropdown-menu" id="deptNav">
               {% for link in site.data.menu.Departments %}
