Changes for IE compatibilty (probably one of many)

--- a/_includes/modalPopup.html
+++ b/_includes/modalPopup.html
@@ -16,7 +16,7 @@
 	</div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<script>
+<script type='text/javascript'>
 $(document).ready(function(){
 	$("#myModal").on("show.bs.modal", function(e){
 		var link = $(e.relatedTarget);
