Added media type to fullcalendar print css.

--- a/_includes/tail.html
+++ b/_includes/tail.html
@@ -32,5 +32,5 @@
   {% asset calendar.js %}
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@3.8.0/dist/fullcalendar.min.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@3.8.0/dist/fullcalendar.min.css" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@3.8.0/dist/fullcalendar.print.min.css" crossorigin="anonymous" />
+  <link rel="stylesheet" media="print" href="https://cdn.jsdelivr.net/npm/fullcalendar@3.8.0/dist/fullcalendar.print.min.css" crossorigin="anonymous" />
 {% endif %}
