--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
 
   <!-- Main CSS  -->
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-
+  
   <!-- Latest compiled and minified JavaScript -->
   <!-- Jquery -->
   <script src="https://cdn.jsdelivr.net/jquery/3.2.1/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous" ></script>
@@ -41,6 +41,12 @@
   <!-- Contacts -->
   {% if page.contacts %}
     {% asset contactInfo.js %}
+  {% endif %}
+
+<!-- Bootstrap Datatables -->
+  {% if page.datatable %}  
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs-3.3.7/dt-1.10.16/r-2.2.1/datatables.min.css"/>
+  <script type="text/javascript" src="https://cdn.datatables.net/v/bs-3.3.7/dt-1.10.16/r-2.2.1/datatables.min.js"></script>
   {% endif %}
 
   <!-- Bootstrap Treeview -->
