--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,8 +45,9 @@
 
 <!-- Bootstrap Datatables -->
   {% if page.datatable %}  
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs-3.3.7/dt-1.10.16/r-2.2.1/datatables.min.css"/>
-  <script type="text/javascript" src="https://cdn.datatables.net/v/bs-3.3.7/dt-1.10.16/r-2.2.1/datatables.min.js"></script>
+  <!-- NOTE: you need to leave jquery and bootstrap elements in this url list -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs/jq-3.2.1/dt-1.10.16/r-2.2.1/datatables.min.css"/>
+  <script type="text/javascript" src="https://cdn.datatables.net/v/bs/jq-3.2.1/dt-1.10.16/r-2.2.1/datatables.min.js"></script>  
   {% endif %}
 
   <!-- Bootstrap Treeview -->
