--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -75,15 +75,12 @@
                 </li>
               {% endfor %}
             </li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Mapping<b class="caret"></b></a>
-            <ul class="dropdown-menu">
-              {% for link in site.data.menu.Mapping %}
-                <li>
-                  <a class="page-link" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
-                </li>
-              {% endfor %}
-            </ul>
+            <li>
+                {% for link in site.data.menu.Maps %}
+                  <li>
+                    <a class="page-link" href="{{ link.url | prepend: site.baseurl }}">{{ link.title }}</a>
+                  </li>
+                {% endfor %}
             </li>
             <li>
               {% for link in site.data.menu.Contact %}
