--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -8,35 +8,35 @@
         </select>
       </div>
     </div>
-  <div class="form-group">
+  <div class="form-group" id="formName">
     <label for="name" class="control-label">Name</label>
     <div class="input-group">
       <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
       <input type="text" class="form-control" id="name" name="Name" placeholder="Name" required />
     </div>
   </div>
-  <div class="form-group">
+  <div class="form-group" id="formEmail">
     <label for="email" class="control-label">Email</label>
     <div class="input-group">
       <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
       <input type="email" class="form-control" id="email" name="Email" placeholder="Email" required multiple />
     </div>
   </div>
-  <div class="form-group">
+  <div class="form-group" id="formPhone">
     <label for="phone" class="control-label">Phone</label>
     <div class="input-group">
       <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
       <input type="tel" class="form-control" id="phone" name="Phone" placeholder="Phone" />
     </div>
   </div>
-  <div class="form-group">
+  <div class="form-group" id="formMessage">
     <label for="message" class="control-label">Message</label>
     <div class="input-group">
       <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
       <textarea rows="4" class="form-control" id="message" name="Message" placeholder="Enter message here..." required></textarea>
     </div>
   </div>
-  <div class="form-group">
+  <div class="form-group" id="formSend">
     <input class="btn btn-info" type="submit" value="Send">
   </div>
 </form>
