Fixed and closed issue #113.

--- a/_includes/contactBlock.html
+++ b/_includes/contactBlock.html
@@ -45,3 +45,11 @@
 <script>
   contactInfo();
 </script>
+<script>
+  $( () => {
+    const isPA = $("#deptHeader").text();
+    if (isPA == "Prosecuting Attorney"){
+      $("#emailButton").addClass("hidden")
+    }
+  })
+</script>
