moved fileDownloadEx to an include, removed the old plat map call.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -64,5 +64,8 @@
   {% asset news.js %}
 {% endif %}
 
+{% if page.fileDownload %}
+  {% asset fileDownload.js %}
+{% endif %}
   <!-- WorkAround: Force asset to be included -->
 </head>
