--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -1,39 +1,42 @@
-<form class="form-horizontal well" id="contact" name="Contact Form" netlify-honeypot="_gotcha" action="thank-you" netlify>
+<form class="form-horizontal well" id="contact" name="Contact Form">
   <div class="form-group">
     <label for="department" class="control-label">Department</label>
     <div class="input-group">
-        <span class="input-group-addon"><i class="fa fa-users" aria-hidden="true"></i></span>
-        <select class="form-control" id="department" name="Department ID" required>
-          <option id="deptList" value="loading" disabled selected>Loading...</option>
-        </select>
-      </div>
+      <span class="input-group-addon"><i class="fa fa-users" aria-hidden="true"></i></span>
+      <select class="form-control" id="department" name="deptID" required>
+        <option id="deptList" value="loading" disabled selected>Loading...</option>
+      </select>
     </div>
+  </div>
   <div class="form-group" id="formName">
     <label for="name" class="control-label">Name</label>
     <div class="input-group">
       <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-      <input type="text" class="form-control" id="name" name="Name" placeholder="Name" required />
+      <input type="text" class="form-control" id="name" name="name" placeholder="Name" required />
     </div>
+  </div>
+  <div class="form-group hidden" id="formTrap">
+    <input type="text" id="trap" name="trap" placeholder="Gotcha Bot"/>
   </div>
   <div class="form-group" id="formEmail">
     <label for="email" class="control-label">Email</label>
     <div class="input-group">
       <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-      <input type="email" class="form-control" id="email" name="Email" placeholder="Email" required multiple />
+      <input type="email" class="form-control" id="email" name="email" placeholder="Email" required multiple />
     </div>
   </div>
   <div class="form-group" id="formPhone">
     <label for="phone" class="control-label">Phone</label>
     <div class="input-group">
       <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
-      <input type="tel" class="form-control" id="phone" name="Phone" placeholder="Phone" />
+      <input type="tel" class="form-control" id="phone" name="phone" placeholder="Phone" />
     </div>
   </div>
   <div class="form-group" id="formMessage">
     <label for="message" class="control-label">Message</label>
     <div class="input-group">
       <span class="input-group-addon"><i class="glyphicon glyphicon-pencil"></i></span>
-      <textarea rows="4" class="form-control" id="message" name="Message" placeholder="Enter message here..." required></textarea>
+      <textarea rows="4" class="form-control" id="message" name="message" placeholder="Enter message here..." required></textarea>
     </div>
   </div>
   <div class="form-group" id="formSend">
@@ -41,8 +44,14 @@
   </div>
 </form>
 
+<div class="jumbotron" id="thanks" hidden>
+  <p class="text-center">Thank you for your submission.</p>
+</div>
+
 {% asset contactInfo.js %}
+<script src="https://cdn.jsdelivr.net/npm/axios@0.18.0/dist/axios.min.js"></script>
 <script type="text/javascript">
   deptList();
   formCheck();
+  formSubmit();
 </script>
